# nkc

./: .gitignore  README.md  meson.build  sample.txt  test_input.txt
src/: ast.cc  binop.cc  lex.cc  main.cc  parser.cc  tokenize.cc
src/include/nkc/: ast.hh  codegen.hh  common.hh  lex.hh  main.hh  parse.hh  parser.hh  tokenize.hh
src/include/nkc/tokenize/: ast.hh  lex.hh  main.hh
src/lib/: binop.cc  codegen.cc  main.cc  parser.cc  tokenize.cc
src/lib/parse/: binop.cc  main.cc
src/lib/tokenize/: ast.cc  lex.cc  main.cc
subprojects/: ntokenize.wrap
